--- a/style.css
+++ b/style.css
@@ -33,11 +33,12 @@ h2 {
     margin-bottom: 80px;
 }
 
-#header iframe{
+.game {
     position: absolute;
     width: 100%;
     height: 90%;
     border: none;
+    margin-top: 1%;
 }
 
 .container {
@@ -89,6 +90,16 @@ h2 {
     text-decoration: none;
     font-weight: bold;
     color: #fbfbf4;
+}
+
+.youtube {
+    width: 70%;
+    height: 80%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 1%;
 }
 
 /***About***/
@@ -152,7 +163,7 @@ h2 {
     padding: 15px 0;
     background: #c0d5b8;
     font-weight: 300;
-    margin-top: 20px;
+    margin-top: 1.5%;
 }
 
 .copyright p{
